# thinkprint

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_answers.json  sample_claude.md  sample_thinkprint.md  sample_thinkprint_output.md
src/thinkprint/: __init__.py  cli.py  mcp_server.py  models.py  output.py  pipeline.py  storage.py
src/thinkprint/archaeology/: __init__.py  clusterer.py  signals.py  synthesizer.py
src/thinkprint/extractors/: __init__.py  chat_exports.py  config_files.py
src/thinkprint/filter/: __init__.py  injection.py  noise.py
src/thinkprint/interview/: __init__.py  questions.py  session.py
src/thinkprint/synthesis/: __init__.py  profile.py
tests/: conftest.py  test_extractors.py  test_filter.py  test_interview.py  test_signals.py  test_storage.py  test_synthesis.py
