[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinkprint"
version = "0.1.0"
description = "Extract behavioral rules from your AI chat history and config files. Serve them to any AI client over MCP."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Chris DiMarco", email = "chris.john.dimarco@gmail.com" },
]
keywords = ["mcp", "ai", "memory", "claude", "chatgpt", "personalization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "anthropic>=0.39",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "rich>=13.7",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
thinkprint = "thinkprint.cli:cli"

[project.urls]
Homepage = "https://github.com/ChrisJDiMarco/thinkprint"
Repository = "https://github.com/ChrisJDiMarco/thinkprint"
Issues = "https://github.com/ChrisJDiMarco/thinkprint/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/thinkprint"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
